--- a/Entrega.html
+++ b/Entrega.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Receta</h1>
+    <h3>Ingredientes:</h3>
+    <ul>
+        <li>1 masa de hojaldre.</li>
+        <li>Azúcar.</li>
+        <li>Una cucharada de mantequilla sin sal.</li>
+    </ul>
+    
 </body>
 </html>
