--- a/Entrega.html
+++ b/Entrega.html
@@ -14,6 +14,16 @@
         <li>Azúcar.</li>
         <li>Una cucharada de mantequilla sin sal.</li>
     </ul>
-    
+    <ol>
+        <li>Abrimos la masa de hojaldre y la estiramos bien.</li>
+        <li>Hacemos triángulos.</li>
+        <li>Cogemos un triángulo y desde la parte mas larga vams enrollando hasta llegar a la punta.</li>
+        <li>Curvamos las puntas para crear los cuernos.</li>
+        <li>Calentamos la mantequilla en el microondas durante 15 segundos a baja potencia.</li>
+        <li>Precalentamos la freidora de aire un tiempo de 5 minutos a 185ºC</li>
+        <li>Mientras se calienta la airfryer pintamos los croissants con mantequilla.</li>
+        <li>Añadimos azúcar por encima de los cruasanes.</li>
+        <li>Ponemos nuestros croissants dentro de la cubeta y programamos una temperatura de 185ºC durante un tiempo de 10 minutos.</li>
+    </ol>
 </body>
 </html>
