--- a/Entrega.html
+++ b/Entrega.html
@@ -7,7 +7,7 @@
     <title>Entrega</title>
 </head>
 <body>
-    <h1>Receta</h1>
+    <h1>Receta de Croissants</h1>
     <h3>Ingredientes:</h3>
     <ul>
         <li>1 masa de hojaldre.</li>
