--- a/Entrega.html
+++ b/Entrega.html
@@ -25,5 +25,6 @@
         <li>Añadimos azúcar por encima de los cruasanes.</li>
         <li>Ponemos nuestros croissants dentro de la cubeta y programamos una temperatura de 185ºC durante un tiempo de 10 minutos.</li>
     </ol>
+    <p>Fernando ya nos contarás si están ricos</p>
 </body>
 </html>
